@@ -9,7 +9,8 @@
   im_atantra(), im_exptra(), im_exp10tra(), im_logtra(), im_log10tra(),
   im_abs(), im_sign(), im_max(), im_maxpos(), im_deviate(), im_divide(),
   im_multiply(), im_stats(), im_measure(), im_recomb(), im_floor(), im_ceil(),
-  im_rint()
+  im_rint(), im_equal(), im_notequal(), im_less(), im_lesseq(), im_more(),
+  im_moreeq()
   redone as classes
 - added argument priorites to help control arg ordering
 - generate has a 'stop' param to signal successful early termination
